[tool.poetry]
name = "csv_parser"
version = "0.1.0"
description = ""
authors = ["Denzzelindahouse <deniro-094@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
memory-profiler = "^0.60.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
